[package]
name = "proxy-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.10.2"
chrono = { version = "0.4.40", features = ["serde"] }
diesel = { version = "2.2.10", features = ["chrono", "mysql", "r2d2"] }
dotenvy = "0.15.7"
mysqlclient-sys = "=0.4.0"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
